Fixed randomizing being covered

--- a/ctscheduler.css
+++ b/ctscheduler.css
@@ -17,6 +17,7 @@ top: 30px;
 float: left;
 position: relative;
 visibility: visible;
+margin-top: 35px;
 }
 
 #randomizingNotification {
